# working-memory-rnn

./: .gitignore  README.md  custom_config.yml  pyproject.toml  requirements-animation.txt  requirements-cuda.txt  requirements.txt
configs/: baseline_delay.yaml  baseline_delay_relu.yaml  baseline_delay_stable.yaml  baseline_delay_tanh.yaml  categorical_working_memory.yaml  circular_working_memory.yaml  fixation_circular_working_memory.yaml  tuned_delay.yaml  tuned_delay_fixation_gate_stable.yaml  tuned_delay_stable.yaml  yang_fixation_circular_working_memory.yaml
configs/archive/: README.md  tuned_delay_fixation_gate.yaml
docs/: analysis-figure-rationale.md  build-log.md  changelog.md  fixation-circular-working-memory.md  model-architecture.md  model-run-archive.md  noise-structure-experiment-protocol.md  tuned-delay-stable-model-summary.md
docs/archive/: intermediate-circular-attractor-model-summary.md
docs/reports/: gaussian_control_results.tex  noise-structure-full-results.md  noise_structure_perturbation_results.tex  stable_model_summary.tex
notebooks/: 01_yang_fixation_circular_working_memory.ipynb  02_working_memory_task_schematic.ipynb  03_gain_modulation_experiment.ipynb
tests/: test_analysis_pca.py  test_config_and_device.py  test_cross_temporal_decoder.py  test_evaluate_cli.py  test_evaluate_tuned_metrics.py  test_hidden_angle_decoder.py  test_model.py  test_noise_structure_experiment.py  test_plot_seed_sweeps.py  test_task.py  test_train_tuned_metrics.py  test_training_pipeline.py  test_tuned_task.py  test_tuned_training_utils.py
(+26 files in other folders)
